<resources>
    <string name="app_name">Toko Online Pnp Clean Architecture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account_yet">Don’t have an account yet ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_identitas_nim_nip">No Identitas/Nim/Nip</string>
    <string name="no_hp">No Hp</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="selamat_menikmati">Selamat menikmati</string>
    <string name="error_message">Silahkan dicoba lagi</string>
    <string name="tutup">Tutup</string>
    <string name="lanjut">Lanjut</string>
</resources>