<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:id="@+id/linearLayout"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/TextView.aclonicaUngu_24sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/edtNamaLengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nama_lengkap"
            style="@style/EditText.satu"
            android:layout_marginTop="28dp"/>

        <EditText
            android:id="@+id/edtNoIdentitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/no_identitas_nim_nip"
            style="@style/EditText.satu"
            android:layout_marginTop="28dp"/>

        <EditText
            android:id="@+id/edtNoHp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/no_hp"
            style="@style/EditText.satu"
            android:layout_marginTop="28dp"/>

        <EditText
            android:id="@+id/edtAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/alamat_lengkap"
            style="@style/EditText.satu"
            android:layout_marginTop="28dp"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            style="@style/EditText.satu"
            android:layout_marginTop="28dp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            style="@style/EditText.satu"
            android:layout_marginTop="28dp"/>

        <EditText
            android:id="@+id/edtConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            style="@style/EditText.satu"
            android:layout_marginTop="28dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            style="@style/Button.satu"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>